@@ -1,5 +1,12 @@
 2015-02-09  Alan Modra  <amodra@gmail.com>
 
+	* elf32-ppc.c (ppc_elf_relocate_section): Don't segfault on NULL
+	tls_sec.
+	* elf64-ppc.c (ppc64_elf_relocate_section): Likewise.
+	* elflink.c (elf_link_output_extsym): Don't assert on NULL tls_sec.
+
+2015-02-09  Alan Modra  <amodra@gmail.com>
+
 	* elflink.c: Whitespace, formatting fixes.
 	(elf_link_input_bfd): Clarify comment.
 	(elf_link_output_extsym): Exclude symbols in linker created
